fix(style): Make project-container to have overflow: hidden, so when transformed tasks wont disrupt structure

--- a/django_instance/schedule/static/styles.css
+++ b/django_instance/schedule/static/styles.css
@@ -13,6 +13,7 @@ body, html, li, ul, form {
 
 .project-container{
     background-color: white;
+    overflow: hidden;
 }
 
 .background {
